# mspm

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml
mspm/data/: __init__.py  downloader.py  preprocessor.py
mspm/eam/: __init__.py  agent.py  dueling_dqn.py  environment.py  replay_buffer.py  resnet1d.py
mspm/sam/: __init__.py  agent.py  environment.py  policy_network.py  rollout_buffer.py  value_network.py
mspm/utils/: __init__.py  config.py  device.py  metrics.py  portfolio.py
scripts/: backtest.py  generate_signals.py  train_eam.py  train_sam.py
